# Crunch2

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  azure-pipelines.yml  conanfile.py  crn.2010.sln  crn_examples.2010.sln  license.txt
crnlib/: CMakeLists.txt  Makefile  crn_arealist.cpp  crn_arealist.h  crn_assert.cpp  crn_assert.h  crn_atomics.h  crn_buffer_stream.h  crn_cfile_stream.h  crn_checksum.cpp  crn_checksum.h  crn_clusterizer.h  crn_color.h  crn_colorized_console.cpp  crn_colorized_console.h  crn_command_line_params.cpp  crn_command_line_params.h  crn_comp.cpp  crn_comp.h  crn_console.cpp  crn_console.h  crn_core.cpp  crn_core.h  crn_darwin_pthreads.cpp  crn_darwin_pthreads.h  crn_data_stream.cpp  crn_data_stream.h  crn_data_stream_serializer.h  crn_dds_comp.cpp  crn_dds_comp.h  crn_decomp.cpp  crn_dxt.cpp  crn_dxt.h  crn_dxt1.cpp  crn_dxt1.h  crn_dxt5a.cpp  crn_dxt5a.h  crn_dxt_endpoint_refiner.cpp  crn_dxt_endpoint_refiner.h  crn_dxt_fast.cpp  (+122 more)
crunch/: CMakeLists.txt  corpus_gen.cpp  corpus_gen.h  corpus_test.cpp  corpus_test.h  crunch.2010.vcxproj  crunch.2010.vcxproj.filters  crunch.cpp
emscripten/: crunch_lib.cpp
example1/: CMakeLists.txt  example1.2010.vcxproj  example1.2010.vcxproj.filters  example1.cpp
example2/: CMakeLists.txt  example2.2010.vcxproj  example2.2010.vcxproj.filters  example2.cpp  timer.cpp  timer.h
example3/: CMakeLists.txt  example3.2010.vcxproj  example3.2010.vcxproj.filters  example3.cpp  stb_image.h
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
examples/example2/: CMakeLists.txt  example2.cpp  timer.cpp  timer.h
examples/example3/: CMakeLists.txt  example3.cpp
inc/: crn_decomp.h  crn_defs.h  crnlib.h  dds_defs.h
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
